 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5263: Using wildcard doesn't work with OrcStorage (satishsaley via rohini)

PIG-4548: Records Lost With Specific Combination of Commands and Streaming Function (knoguchi)

PIG-5262: Fix jdiff related issues: fail build upon error, correct xml character escaping (szita)

PIG-5225: Several unit tests are not annotated with @Test (nkollar via rohini)


Release 0.17.0
 
INCOMPATIBLE CHANGES

PIG-5085: Support FLATTEN of maps (szita via rohini)

PIG-4728: Compilation against hbase 1.x fails with hbase-hadoop1-compat not found (szita via rohini)

PIG-4897: Scope of param substitution for run/exec commands (knoguchi)

PIG-4923: Drop Hadoop 1.x support in Pig 0.17 (szita via rohini)

PIG-5109: Remove HadoopJobHistoryLoader (szita via daijy)

PIG-5067: Revisit union on numeric type and chararray to bytearray (knoguchi)
 
IMPROVEMENTS

PIG-5184: set command to view value of a variable (daijy via rohini)

PIG-4059: Pig On Spark

PIG-5188: Review pig-index.xml (szita)

PIG-4924: Translate failures.maxpercent MR setting to Tez Tez (rohini)

PIG-5236: json simple jar not included automatically with piggybank AvroStorage (satishsaley via rohini)

PIG-3103: make mockito a test dependency (instead of compile) (nkollar via szita)

PIG-3021: Split results missing records when there is null values in the column comparison (jeffjee617, cheolsoo via daijy)

PIG-5211: Optimize Nested Limited Sort (jins via daijy)

PIG-5214: search any substring in the input string (rainer-46 via daijy)
