@@ -87,9 +87,6 @@ import org.apache.pig.tools.pigstats.mapreduce.MRJobStats;
 import org.apache.pig.tools.pigstats.mapreduce.MRPigStatsUtil;
 import org.apache.pig.tools.pigstats.mapreduce.MRScriptState;
 
-import org.python.google.common.collect.Lists;
-
-
 /**
  * Main class that launches pig for Map Reduce
  *
